Bug fixes
* Dropdown options wouldn't appear on Safari on iOS.
* Search bar button clipped outside of the page on Safari on iOS.
* Sidebar would become longer than intended in some circumstances.
* Updated README. Fixed a typo and added a font face.

--- a/globals.css
+++ b/globals.css
@@ -49,6 +49,17 @@ select {
     text-align: left;
 }
 
+select {
+    background: #fff;
+    color: #000;
+    width: 100%;
+}
+
+option {
+    background: #fff;
+    color: #000;
+}
+
 a { text-decoration: underline; }
 a:hover { color: #b3b3b3; }
 blockquote { border-left: 1px solid rgba(255,255,255,0.6); }
